--- a/Diseño Web/HTML/DiccionarioCss.html
+++ b/Diseño Web/HTML/DiccionarioCss.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DICCIONARIO DE ETIQUETAS HTML</title>
+    <title>DICCIONARIO DE ETIQUETAS CSS</title>
     <style>
         /* Aplica estilos de centrado al contenedor principal */
         .container {
@@ -11,7 +11,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            text-align: center; /* Esto centra horizontalmente el texto */
+            text-align: left; /* Esto centra horizontalmente el texto */
         }
     </style>
     <style>
@@ -29,14 +29,14 @@
     <style>
         .cuadrado {
             width: 200px; /* Ancho deseado */
-            height: 200px; /* Altura deseada */
+            height: 300px; /* Altura deseada */
             text-align:left; /* Alinea el texto en el centro del cuadrado */
         }
     </style> 
 </head>
 <body background="grey">
     <div class="container">
-        <h1>DICCIONARIO DE ETIQUETAS HTML</h1>
+        <h1>DICCIONARIO DE ETIQUETAS CSS</h1>
         <table border = "2">
             <thead>
                 <tr>
@@ -48,137 +48,192 @@
             </thead>
             </tbody>
                 <tr>
-                    <th>HTML: 5</th>
+                    <th>clase</th>
                     <th>
-                        <div class="cuadrado">
-                            es un atajo para poder generar una estructura básica de HTML 5.<br>NOTA: TODAS LAS ETIQUETAS TIENEN UN ESPACIO INTERMEDIO O UN PUNTO<br> esto es para poder manejar el codigo html sin que el editor de texto compile el codigo introducido
-                        </div>
-                    </th>
-                    <th>Baja</th>
-                    <th> 
-                    <div class="justificado-izquierda">
-                        al introducir el texto "html: 5" la estructura de este comando queda tal que asi: <br>
-                        <pre>
-                            <code style="color:blue">
-<.!DOCTYPE html>
-<.html lang="en">
-    <.head>
-    <.meta charset="UTF-8">
-    <.meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <.title>DICCIONARIO DE ETIQUETAS HTML</.title>
-    </.head>
-    <.body>
-    
-    todos los cambios que se generen en la pagina <br>      o cuerpo de la pagina web tendrán que ser consignados aquí
-                                
-    < body>
-< html>
-                            </code>
-                        </pre> 
-                        de esta manera podrás generar una estructura básica de HTML donde todos cambios se hacen dentro del body de la pagina
-                    </div>
-                    </th>
-                </tr>
-                <tr>
-                    <th>< head></th>
-                    <th>
-                        <div class="cuadrado">
-                            < head> en HTML se utiliza para proporcionar información esencial sobre la página y enlazar recursos externos que ayudan a dar forma y mejorar la experiencia del usuario y la optimización de motores de búsqueda. Los contenidos de < head> no se muestran directamente en la página pero son críticos para su funcionamiento y presentación. NOTA: LOS 'style' van sin puntos
-                        </div>
-                    </th>
-                    <th>Baja</th>
-                    <th> 
-                    <div class="justificado-izquierda">
-                        Por ejemplo, el head de este mismo documento tiene la siguiente forma: <br>
-                        <pre>
-                            <code style="color:blue">
-<.head>
-    <.meta charset="UTF-8">
-    <.meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <.title>DICCIONARIO DE ETIQUETAS HTML</.title>
-    <.style>
-    /* Aplica estilos de centrado al contenedor principal */
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center; /* Esto centra horizontalmente el texto */
-            }
-    </.style>
-    <.style>
-        .justificado-izquierda {
-            width: 600px; /* Ancho deseado */
-            height: auto; /* Altura deseada */
-            text-align: left;
-            }
-    </.style>
-    <.style>
-        /* Cambia #FF0000 a tu color hexadecimal deseado */
-        body {
-            background-color: #d9d9d9; 
-            }
-    </.style>
-    <.style>
-        .cuadrado {
-            width: 200px; /* Ancho deseado */
-            height: 200px; /* Altura deseada */
-            text-align:center; /*Alinea el texto en el centro del cuadrado*/
-            }
-    < /style> 
-< /head>
-                            </code>
-                        </pre> 
-                        Aquí podemos ver varias configuraciones hechas al código que no se ven reflejadas dentro de este documento, como puede ser el color de fondo, el color del codigo escrito, o incluso la disposición de los diferentes elementos de la tabla.
-                    </div>
-                    </th>
-                </tr>
-                <tr>
-                    <th><.style></th>
-                    <th>
-                        <div class="cuadrado">
-                            Es una etiqueta que permite utilizar estilos de CSS dentro del propio codigo HTML, se crea dentro del Head y permite asignarle ciertas cualidades como colores, contornos, etc. 
-                        </div>
-                    </th>
-                    <th>Baja</th>
-                    <th> 
-                    <div class="justificado-izquierda">
-                        al introducir el texto "html: 5" se genera el siguiente texto: <br>
-                        <pre>
-                            <code style="color:blue">
-<.style>
-    .cuadrado {
-    width: 200px; /* Ancho deseado */
-    height: 200px; /* Altura deseada */
-    text-align:left; /* Alinea el texto en el centro del cuadrado */
-    }
-<./style> 
-                            </code>
-                        </pre> 
-                        En este caso, este estilo encapsula el texto en cuadrados para que no supere cierto largo y ancho y se conserve la homogeneidad de la pagina.
-                    </div>
-                    </th>
-                </tr>
-                <tr>
-                    <th><.link</th>
-                    <th>
-                        <div class="cuadrado">
-                            Es una etiqueta que permite enlazar una hoja de estilos CSS al fichero HTML, esto con el fin de poder manejar de manera separada, la estructura de la pagina y sus configuraciones gráficas. 
+                        <div class="container">
+                            es una colección de modificaciones estéticas encapsuladas bajo un nombre de clase <br>NOTA: TODAS LAS ETIQUETAS TIENEN UN ESPACIO INTERMEDIO O UN PUNTO<br> esto es para poder manejar el codigo html sin que el editor de texto compile el codigo introducido
                         </div>
                     </th>
                     <th>Media</th>
                     <th> 
                     <div class="justificado-izquierda">
-                        al introducir el texto "html: 5" se genera el siguiente texto: <br>
+                        se establece la siguiente estructura dentro del fichero CSS <br>
                         <pre>
                             <code style="color:blue">
-<.link rel="stylesheet" href="estilos.css">
+.NombreClase{
+
+CONTENIDO DE LA CLASE
+
+}
                             </code>
                         </pre> 
-                        Agregamos esta linea de codigo junto a la ubicación del fichero CSS en el que se encuentra la tabla de estilos CSS. en este Fichero deben encontrarse referenciados las diferentes modificaciones gráficas
+                        de esta manera podremos separar diferentes configuraciones estéticas o de funcionamiento dentro de una clase, es importante declarar las clases con un punto al inicio de la declaración, al momento de involucrarla dentro de un div o un body si que se invoca con el nombre sin punto.
                     </div>
                     </th>
                 </tr>
+                <tr>
+                    <th>color</th>
+                    <th>
+                        <div class="container">
+                            establece el color de diversos elementos de la pagina
+                        </div>
+                    </th>
+                    <th>Baja</th>
+                    <th> 
+                    <div class="justificado-izquierda">
+                        Se establece la siguiente linea en cualquier parte de la clase: <br>
+                        <pre>
+                            <code style="color:blue">
+color: #FF0000; 
+
+Cambia #FF0000 a tu color hexadecimal deseado
+                            </code>
+                        </pre> 
+                        al añadir color al la edición, normalmente te salen todas las opciones que puedes editar el color. te salen todas sus combinaciones asociadas como fondos, letras bordes, etc.
+                    </div>
+                    </th>
+                </tr>
+            </tr>
+            <tr>
+                <th>font-family</th>
+                <th>
+                    <div class="container">
+                        Especifica la fuente del texto.
+                    </div>
+                </th>
+                <th>Baja</th>
+                <th> 
+                <div class="justificado-izquierda">
+                    Se establece la siguiente linea en cualquier parte de la clase: <br>
+                    <pre>
+                        <code style="color:blue">
+font-family: Arial, sans-serif;
+                        </code>
+                    </pre> 
+                    establece en orden todas las fuentes permitidas dentro del documento, el orden establecido es el orden en el que se intenta aplicar la fuente, si por alguna razón alguna de las fuentes no esta instalada o no carga, se tienen las siguientes como opcion.   
+                </div>
+                </th>
+            </tr>
+            <tr>
+                <th>text-align</th>
+                <th>
+                    <div class="container">
+                    Alinea el texto dentro de un elemento.	                   
+                    </div>
+                </th>
+                <th>Baja</th>
+                <th> 
+                <div class="justificado-izquierda">
+                    Se establece la siguiente linea en cualquier parte de la clase: <br>
+                    <pre>
+                        <code style="color:blue">
+text-align: center;
+                        </code>
+                    </pre> 
+                    tiene preestablecidos ciertas posiciones dentro de un espacio delimitado, arriba, abajo, izquierda, derecha y centro. esto alinea el texto en esa determinada forma. 
+                </div>
+                </th>
+            </tr>
+            <tr>
+                <th>border</th>
+                <th>
+                    <div class="container">
+                        Define los bordes de un elemento.	
+                    </div>
+                </th>
+                <th>Baja</th>
+                <th> 
+                <div class="justificado-izquierda">
+                    Se establece la siguiente linea en cualquier parte de la clase: <br>
+                    <pre>
+                        <code style="color:blue">
+border: 1px solid #000;
+                        </code>
+                    </pre> 
+                    puedes definir el ancho y otras cualidades del borde dentro de sus parámetros.
+                </div>
+                </th>
+            </tr>
+            <tr>
+                <th>padding</th>
+                <th>
+                    <div class="container">
+                        Define el espacio interior de un elemento.	
+                    </div>
+                </th>
+                <th>Media</th>
+                <th> 
+                <div class="justificado-izquierda">
+                    Se establece la siguiente linea en cualquier parte de la clase: <br>
+                    <pre>
+                        <code style="color:blue">
+padding: 5px;
+                        </code>
+                    </pre> 
+                    puedes establecer una especie de barrera imaginaria entre el borde externo del cuadro y el contenido real, como el borde interior de un marco.
+                </div>
+                </th>
+            </tr>
+            <tr>
+                <th>top, right, bottom, left</th>
+                <th>
+                    <div class="container">
+                        Define la posición de un elemento	
+                    </div>
+                </th>
+                <th>Media</th>
+                <th> 
+                <div class="justificado-izquierda">
+                    Se establece la siguiente linea en cualquier parte de la clase: <br>
+                    <pre>
+                        <code style="color:blue">
+top: 0; right: 0;
+                        </code>
+                    </pre> 
+                    partiendo de una hipotética posición central, podemos mover en diferentes medidas, las posiciones cartesianas del elemento.
+                </div>
+                </th>
+            </tr>
+            <tr>
+                <th>background-image</th>
+                <th>
+                    <div class="container">
+                        Define una imagen como fondo de la pagina	
+                    </div>
+                </th>
+                <th>Media</th>
+                <th> 
+                <div class="justificado-izquierda">
+                    Se establece la siguiente linea en cualquier parte de la clase: <br>
+                    <pre>
+                        <code style="color:blue">
+background-image: url('imagen.jpg');
+                        </code>
+                    </pre> 
+                    puede ser una imagen local, ubicando la ruta en la que se aloja o también un url externo. ademas si la imagen no cubre la totalidad de la pagina, esta imagen se repite como mosaico por default.
+                </div>
+                </th>
+            </tr>
+                        <tr>
+                <th>opacity</th>
+                <th>
+                    <div class="container">
+                        Define el nivel de transparencia de un elemento	
+                    </div>
+                </th>
+                <th>Baja</th>
+                <th> 
+                <div class="justificado-izquierda">
+                    Se establece la siguiente linea en cualquier parte de la clase: <br>
+                    <pre>
+                        <code style="color:blue">
+opacity: 0.5;
+                        </code>
+                    </pre> 
+                    esta linea define la opacidad al 50% lo que lo hace translucido con el fondo, mientras mas alto sea el nivel de transparencia, mas oscuro sera el objeto. y mientras menor sea, mas transparente.
+                </div>
+                </th>
+            </tr>
             </tbody>
         </table>
     </div>
