--- a/Diseño Web/HTML/TALLER 1/HTML/galeria.html
+++ b/Diseño Web/HTML/TALLER 1/HTML/galeria.html
@@ -20,6 +20,6 @@
             <img src="C:\Users\HP\Downloads\ADSO2023\Diseño Web\HTML\TALLER 1\Multimedia\icons8-python-96.png" alt="img 8">
         </div>
     </div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/W_0Za_lwnFo?si=8O9fiuE07o8xBWRQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/W_0Za_lwnFo?si=8O9fiuE07o8xBWRQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay=; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
