--- a/Diseño Web/HTML/TALLER 1/HTML/index.html
+++ b/Diseño Web/HTML/TALLER 1/HTML/index.html
@@ -55,16 +55,16 @@
                     <tbody>
                         <tr>
                             <th>
-                                <img src="C:\Users\Sena\Downloads\Diseño Web clase 6\ADSO2023\Diseño Web\HTML\TALLER 1\Multimedia\icons8-html-96.png" width="100" height="100">
+                                <img src="C:\Users\HP\Downloads\ADSO2023\Diseño Web\HTML\TALLER 1\Multimedia\icons8-html-96.png" width="100" height="100">
                             </th>
                             <th>
-                                <img src="C:\Users\Sena\Downloads\Diseño Web clase 6\ADSO2023\Diseño Web\HTML\TALLER 1\Multimedia\icons8-css-96.png" width="100" height="100">
+                                <img src="C:\Users\HP\Downloads\ADSO2023\Diseño Web\HTML\TALLER 1\Multimedia\icons8-css-96.png" width="100" height="100">
                             </th>
                             <th>
-                                <img src="C:\Users\Sena\Downloads\Diseño Web clase 6\ADSO2023\Diseño Web\HTML\TALLER 1\Multimedia\icons8-javascript-96.png" width="100" height="100">
+                                <img src="C:\Users\HP\Downloads\ADSO2023\Diseño Web\HTML\TALLER 1\Multimedia\icons8-javascript-96.png" width="100" height="100">
                             </th>
                             <th>
-                                <img src="C:\Users\Sena\Downloads\Diseño Web clase 6\ADSO2023\Diseño Web\HTML\TALLER 1\Multimedia\icons8-python-96.png" width="100" height="100">
+                                <img src="C:\Users\HP\Downloads\ADSO2023\Diseño Web\HTML\TALLER 1\Multimedia\icons8-python-96.png" width="100" height="100">
                             </th>
                         </tr>
                     </tbody>
